# gst-plugin-toupcam

./: .gitignore  AUTHORS  COPYING  README  README.md  configure.ac  format.sh  install.sh  setup_ubuntu_20.04.sh
src/: Makefile.am  gstplugin.c  gsttoupcamsrc.c  gsttoupcamsrc.h
